Set java to 17 for jenkins